MODDATAIMP-1189: Fix tests